git-svn-id: https://www.fdsea33.fr/svn/praesens@11 3e045664-9743-0410-8348-e8b78a369948

--- a/app/views/accountancy/operations/journal_list.rhtml
+++ b/app/views/accountancy/operations/journal_list.rhtml
@@ -1,11 +1,11 @@
 <%= link_to_procedure :journal_new -%> &bull; 
-<%= link_to_procedure :journal_type, :settings -%> &bull; 
+<%= link_to_procedure :journal_nature, :settings -%> &bull; 
 <%= link_to "Print general journal".t, :action=>:print_general_journal-%>
 <%=
 print_table :journals do |t|
   t.datum :name
   t.datum :code
-  t.datum :name, :through=>:type
+  t.datum :name, :through=>:nature
   t.datum :closed_on
   t.datum :label, :through=>:counterpart
   t.action :action=>:journal_show,  :image=>:show
