--- a/app/views/accountancy/settings/_journal_nature_form.rhtml
+++ b/app/views/accountancy/settings/_journal_nature_form.rhtml
@@ -1,3 +1,3 @@
-<%= error_messages_for JournalType.to_s.underscore %>
-<%= text_box JournalType, :name%>
-<%= text_box JournalType, :comment%>
+<%= error_messages_for :journal_nature.to_s %>
+<%= text_box :journal_nature, :name%>
+<%= text_box :journal_nature, :comment%>
