--- a/app/views/accountancy/settings/_delay_form.rhtml
+++ b/app/views/accountancy/settings/_delay_form.rhtml
@@ -1,7 +1,7 @@
-<%= error_messages_for :deadline.to_s %>
-<%= text_box :deadline, :name-%>
-<%= text_box :deadline, :active-%>
-<%= text_box :deadline, :months-%>
-<%= text_box :deadline, :days-%>
-<%= text_box :deadline, :end_of_month-%>
-<%= text_box :deadline, :additional_days-%>
+<%= error_messages_for :delay.to_s %>
+<%= text_box :delay, :name-%>
+<%= text_box :delay, :active-%>
+<%= text_box :delay, :months-%>
+<%= text_box :delay, :days-%>
+<%= text_box :delay, :end_of_month-%>
+<%= text_box :delay, :additional_days-%>
