git-svn-id: https://www.fdsea33.fr/svn/praesens@12 3e045664-9743-0410-8348-e8b78a369948

--- a/app/views/accountancy/accounts/show.rhtml
+++ b/app/views/accountancy/accounts/show.rhtml
@@ -28,10 +28,10 @@
   <tr><td><%= read_box @account, :transferable-%></td><td></td></tr>
   </table>
 </fieldset>
-<%if @account.deadline-%>
+<%if @account.delay-%>
 <fieldset class="detail">
-  <legend><%="Deadline".t-%></legend>
-  <div><%= read_box @account.deadline, :name-%></div>
+  <legend><%="Delay".t-%></legend>
+  <div><%= read_box @account.delay, :name-%></div>
 </fieldset>
 <%end-%>
 </td></tr></table>
