--- a/app/views/relationship/settings/_contact_nature_form.rhtml
+++ b/app/views/relationship/settings/_contact_nature_form.rhtml
@@ -1,8 +1,8 @@
-<%= error_messages_for 'entity_contact_type' %>
+<%= error_messages_for 'entity_contact_nature' %>
 
-<!--[form:entity_contact_type]-->
-<%= text_box EntityContactType, "name"%>
-<%= text_box EntityContactType, "active"%>
-<%= text_box EntityContactType, "description"%>
-<!--[eoform:entity_contact_type]-->
+<!--[form:entity_contact_nature]-->
+<%= text_box EntityContactNature, "name"%>
+<%= text_box EntityContactNature, "active"%>
+<%= text_box EntityContactNature, "description"%>
+<!--[eoform:entity_contact_nature]-->
 
