--- a/app/views/relationship/settings/contact_nature_edit.rhtml
+++ b/app/views/relationship/settings/contact_nature_edit.rhtml
@@ -1,8 +1,8 @@
-<h1>Editing entity_contact_type</h1>
+<h1>Editing entity_contact_nature</h1>
 
-<% form_tag :id => @entity_contact_type do %>
-  <%= render :partial => 'contact_type_form' %>
+<% form_tag :id => @entity_contact_nature do %>
+  <%= render :partial => 'contact_nature_form' %>
   <%= submit_tag "Edit".t %>
 <% end %>
 
-<%= link_to 'Back'.t, :action => 'contact_type_list' %>
+<%= link_to 'Back'.t, :action => 'contact_nature_list' %>
