--- a/app/views/relationship/settings/contact_nature_new.rhtml
+++ b/app/views/relationship/settings/contact_nature_new.rhtml
@@ -1,8 +1,8 @@
-<h1>New entity_contact_type</h1>
+<h1>New entity_contact_nature</h1>
 
 <% form_tag do %>
-  <%= render :partial => 'contact_type_form' %>
+  <%= render :partial => 'contact_nature_form' %>
   <%= submit_tag "Create".t %>
 <% end %>
 
-<%= link_to 'Back'.t, :action => 'contact_type_list' %>
+<%= link_to 'Back'.t, :action => 'contact_nature_list' %>
