git-svn-id: https://www.fdsea33.fr/svn/praesens@14 3e045664-9743-0410-8348-e8b78a369948

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,6 @@
 p, td, label, div, input, textarea, select, option, li, legend {
 	font-size:  11px;
-  font-family: Arial, sans-serif;
+  font-family: sans-serif;
 //	margin : 0px;
 //	padding:0px;
 }
